user-service some fix and lombok