@@ -3,29 +3,32 @@ package org.example.mapper;
 import org.example.dto.UserDto;
 import org.example.model.User;
 
-import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.List;
 
 /**
  * @author Anatoliy Shikin
  */
 public class UserMapper {
-    public static User toEntity(UserDto userDto) {
-        return new User(userDto.getFirstName()
-                , userDto.getLastName()
-                , userDto.getPhoneNumber());
-    }
-
     public static UserDto toDto(User user) {
-        return new UserDto(user.getId()
-                , user.getFirstName()
-                , user.getLastName()
-                ,user.getPhoneNumber());
+        return UserDto.builder()
+                .id(user.getId())
+                .firstName(user.getFirstName())
+                .lastName(user.getLastName())
+                .phoneNumber(user.getPhoneNumber())
+                .build();
     }
 
-    public static Collection<UserDto> toListDto(Collection<User> users) {
-        return users.stream()
+    public static User toEntity(UserDto userDto) {
+        return User.builder()
+                .firstName(userDto.getFirstName())
+                .lastName(userDto.getLastName())
+                .phoneNumber(userDto.getPhoneNumber())
+                .build();
+    }
+
+    public static List<UserDto> toListDto(List<User> allUsers) {
+        return allUsers.stream()
                 .map(UserMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
